@startuml py2puml.domain
namespace py2puml.domain {
  namespace package {}
  namespace umlclass {}
  namespace umlitem {}
  namespace umlenum {}
  namespace umlrelation {}
}
class py2puml.domain.package.Package {
  name: str
  children: List[Package]
  items_number: int
}
class py2puml.domain.umlclass.ModuleVisitor {
  classes: None
  enums: None
  namedtuples: None
  root_fqn: None
  __init__(self, root_fqn)
  visit_ClassDef(self, ClassDef node)
}
class py2puml.domain.umlclass.PythonClass {
  name: str
  attributes: List
  methods: List
}
class py2puml.domain.umlclass.PythonModule {
  name: str
  fully_qualified_name: str
  path: Path
  classes: List
}
class py2puml.domain.umlclass.PythonPackage {
  path: Path
  name: str
  fully_qualified_name: str
  modules: List[PythonModule]
  packages: List[PythonPackage]
}
class py2puml.domain.umlclass.UmlAttribute {
  name: str
  type: str
  static: bool
}
class py2puml.domain.umlclass.UmlClass {
  attributes: List[UmlAttribute]
  methods: List[UmlMethod]
  is_abstract: bool
}
class py2puml.domain.umlitem.UmlItem {
  name: str
  fqn: str
}
class py2puml.domain.umlclass.UmlMethod {
  name: str
  arguments: Dict
  is_static: bool
  is_class: bool
  return_type: str
}
class py2puml.domain.umlenum.Member {
  name: str
  value: str
}
class py2puml.domain.umlenum.UmlEnum {
  members: List[Member]
}
enum py2puml.domain.umlrelation.RelType {
  COMPOSITION: * {static}
  INHERITANCE: <| {static}
}
class py2puml.domain.umlrelation.UmlRelation {
  source_fqn: str
  target_fqn: str
  type: RelType
}
py2puml.domain.package.Package *-- py2puml.domain.package.Package
py2puml.domain.umlclass.PythonPackage *-- py2puml.domain.umlclass.PythonModule
py2puml.domain.umlclass.PythonPackage *-- py2puml.domain.umlclass.PythonPackage
py2puml.domain.umlclass.UmlClass *-- py2puml.domain.umlclass.UmlAttribute
py2puml.domain.umlclass.UmlClass *-- py2puml.domain.umlclass.UmlMethod
py2puml.domain.umlitem.UmlItem <|-- py2puml.domain.umlclass.UmlClass
py2puml.domain.umlenum.UmlEnum *-- py2puml.domain.umlenum.Member
py2puml.domain.umlitem.UmlItem <|-- py2puml.domain.umlenum.UmlEnum
py2puml.domain.umlrelation.UmlRelation *-- py2puml.domain.umlrelation.RelType
footer Generated by //py2puml//
@enduml

